@@ -9,9 +9,12 @@
 #ifndef _YARP2_SEMAPHOREIMPL_
 #define _YARP2_SEMAPHOREIMPL_
 
-#ifdef __linux__
-#define YARP_USE_NATIVE_POSIX_SEMA
-#endif
+// There is a problem with YARP+ACE semaphores on some Linux distributions,
+// where semaphores fail to work correctly.
+// A hack to fix this problem is to uncomment the three lines below --paulfitz
+//#ifdef __linux__
+//#define YARP_USE_NATIVE_POSIX_SEMA
+//#endif
 
 #ifdef YARP_USE_NATIVE_POSIX_SEMA
 #include <semaphore.h>
