@@ -1,3 +1,10 @@
+2009-03-13  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* src/libYARP_OS/include/yarp/os/impl/SemaphoreImpl.h: undo
+	semaphore bypass committed on 2009-03-12.  It was decided that
+	it is better not to work around this problem, but to address it
+	face on.
+
 2009-03-12  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* src/libYARP_OS/include/yarp/os/impl/SemaphoreImpl.h: bypass
